--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "node-sass -wr styles/style.scss style.css"
+    "sass": "node-sass -wr --source-map true styles/style.scss style.css"
   },
   "repository": {
     "type": "git",
